--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   background-image: url("./assets/img/banner-bg.png");
-  background-position: top center;
+  background-position: top left;
   /* background-size: cover; */
   background-repeat: no-repeat;
   margin: 0;
