--- a/src/components/projects/Project.module.css
+++ b/src/components/projects/Project.module.css
@@ -1,13 +1,7 @@
 .project {
-  margin-top: 2rem;
-  overflow: hidden;
-
-  position: relative;
-}
-.flex {
-  display: flex;
-  position: relative;
-  flex-wrap: wrap;
+  /* whole projectcomponent*/
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 }
 .project h2 {
   text-align: center;
@@ -22,113 +16,127 @@
   border: 1px solid rgba(255, 255, 255, 0.5);
   font-size: 20px;
 }
+.flex {
+  display: flex;
+  flex-wrap: wrap;
 
-@media screen and (max-width: 655px) {
-  .project {
-    padding: 0px 20px;
-  }
-  .projecttype {
-    width: calc(100%);
-  }
-  .robo {
-    display: none;
-  }
-  .containe {
-    width: 100%;
-  }
+  justify-content: space-around;
 }
-
-@media screen and (min-width: 655px) and (max-width: 810px) {
-  .project {
-    padding: 0px 20px;
-  }
-  .projecttype {
-    width: calc(100%);
-  }
-  .robo {
-    display: flex;
-  }
-  .containe {
-    width: 70%;
-  }
-}
-
-@media screen and (min-width: 810px) and (max-width: 973px) {
-  .project {
-    padding: 0px 20px;
-  }
-  .projecttype {
-    width: calc(50%); /* Adjust the margin as needed */
-  }
-  .robo {
-    display: flex;
-  }
-  .containe {
-    width: 70%;
-  }
-}
-
-@media screen and (min-width: 973px) {
-  .project {
-    padding: 0 30px;
-  }
-  .projecttype {
-    width: calc(50%); /* Adjust the margin as needed */
-  }
-  .robo {
-    display: flex;
-  }
-  .containe {
-    width: 70%;
-  }
-}
-.projecttype {
-  border: 1px solid salmon;
-  padding: 1rem;
-  height: auto;
-  margin-bottom: 1.5rem;
-}
-.typediv h4 {
-  padding-bottom: 0.5rem;
-  border-bottom: 1px solid salmon;
-}
-.skilldiv {
-  color: rgb(12, 0, 14);
-  background-color: rgba(0, 255, 255, 0.123);
+.item {
+  overflow: hidden;
   position: relative;
-  text-align: center;
-  width: 100%;
+  margin-top: 1rem;
   border-radius: 1rem;
-  margin-bottom: 4px;
-  box-shadow: 0 0 2px white;
-  box-sizing: border-box;
+  left: 1;
+  transition: 0.5s;
+  box-shadow: 0 0 15px rgb(114, 146, 250);
 }
-.fill {
-  z-index: -1;
-  border-radius: 1rem;
-  height: 100%;
-  background-color: rgb(78, 252, 252);
+
+.vis,
+.vist {
+  display: none;
+}
+.projecttext {
+  top: 0;
   position: absolute;
+  background-color: salmon;
+  padding: 1rem;
+  width: 100%;
+  height: 100%;
   transition: 1s;
 }
-.robo {
-  position: relative;
-  align-items: center;
-  width: 30%;
-  height: auto;
+.item:hover .projecttext {
+  top: 100%;
 }
-.left {
-  position: relative;
-  width: 70%;
-  height: 100%;
+.link {
+  position: absolute;
+  background-color: rgba(255, 255, 0, 0.521);
+  border-radius: 5rem;
+  z-index: 1;
+  top: 85%;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 2px 10px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.575);
 }
-.right {
-  position: relative;
-  width: 30%;
-  height: 100%;
-  background-color: rgba(27, 1, 1, 0.473);
+@media screen and (max-width: 600px) {
+  .project {
+    padding: 0px 20px;
+  }
+  .item {
+    width: calc(100%);
+  }
+  .vis,
+  .vist {
+    display: none;
+  }
+}
+@media screen and (min-width: 600px) and (max-width: 813px) {
+  .project {
+    padding: 0px 20px;
+  }
+  .item {
+    width: calc(70%);
+  }
+  .vis,
+  .vist {
+    display: none;
+  }
 }
 
-.robo img {
-  position: absolute;
+@media screen and (min-width: 813px) and (max-width: 1000px) {
+  .project {
+    padding: 0px 20px;
+  }
+  .item {
+    width: calc(49%);
+  }
+  .vis,
+  .vist {
+    display: none;
+  }
+}
+@media screen and (min-width: 1000px) and (max-width: 1200px) {
+  .project {
+    padding: 0px 20px;
+  }
+  .item {
+    width: calc(40% - 10px);
+  }
+  .vis,
+  .vist {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project {
+    padding: 0px 20px;
+  }
+  .item {
+    width: calc(33.3% - 10px); /* Adjust the margin as needed */
+  }
+  .vis {
+    display: block;
+    visibility: hidden;
+  }
+  .vist {
+    border: none;
+    display: block;
+    overflow: visible;
+  }
+
+  .vist img {
+    position: absolute;
+    width: auto;
+    bottom: 2%;
+    left: 10%;
+    width: calc(90%);
+  }
+  .vist .projecttext {
+    display: none;
+  }
+  .vist a {
+    display: none;
+  }
 }
