--- a/src/components/Header/Navbar.module.css
+++ b/src/components/Header/Navbar.module.css
@@ -1,10 +1,10 @@
 header {
+  position: relative;
+}
+.header {
   display: flex;
   justify-content: space-between;
   padding: 20px 100px;
-}
-header img {
-  width: 4rem;
 }
 .nav,
 .navbartext {
@@ -53,6 +53,7 @@ header img {
 }
 /******Manu toggle*****/
 .toggle {
+  z-index: 20;
   padding: 2px;
   position: relative;
   width: 60px;
@@ -91,9 +92,58 @@ header img {
   transform: translatey(0px) rotate(315deg);
   transition-delay: 0.25s;
 }
-
 .toggle.active span:nth-child(3) {
   transform: translatex(60px);
+}
+
+.overley {
+  position: fixed;
+  display: block;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #1212128e;
+}
+.activeoverley {
+  position: fixed;
+  display: none;
+}
+.manu {
+  position: fixed;
+  display: block;
+  z-index: 20;
+  top: 0px;
+  left: 0px;
+  width: 75%;
+  height: 100vh;
+  background-color: #fff;
+  transition: 1s;
+  color: white;
+}
+.activemanu {
+  position: fixed;
+  display: block;
+  z-index: 20;
+  top: 0px;
+  left: -20rem;
+  width: 20rem;
+  height: 100vh;
+  transition: 1s;
+}
+.mainmanu {
+  padding: 1rem;
+  background-color: rgb(22, 1, 31);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.mainmanu img {
+  width: 75%;
+  border-radius: 50%;
 }
 
 /******Media Query*****/
@@ -106,7 +156,7 @@ header img {
   .toggle {
     display: flex;
   }
-  header {
+  .header {
     padding: 20px 20px;
   }
 }
@@ -116,7 +166,7 @@ header img {
   .toggle {
     display: none;
   }
-  header {
+  .header {
     padding: 20px 20px;
   }
 }
@@ -125,7 +175,7 @@ header img {
   .toggle {
     display: none;
   }
-  header {
+  .header {
     padding: 20px 20px;
   }
 }
