--- a/src/components/banner/Banner.module.css
+++ b/src/components/banner/Banner.module.css
@@ -13,8 +13,6 @@
   display: inline-block;
 }
 .banner {
-  margin-top: 5rem;
-  height: 75vh;
   overflow: hidden;
 }
 .h1 {
@@ -48,4 +46,36 @@
 }
 .vvd:hover svg {
   margin-left: 25px;
+}
+.downloadlink {
+  text-decoration: none;
+}
+@media screen and (max-width: 655px) {
+  .banner {
+    margin-top: 1rem;
+    height: 125vh;
+  }
+}
+
+@media screen and (min-width: 655px) and (max-width: 770px) {
+  .banner {
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+    height: 125vh;
+  }
+}
+
+@media screen and (min-width: 770px) and (max-width: 1000px) {
+  .banner {
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+    height: 75vh;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .banner {
+    margin-top: 5rem;
+    height: 75vh;
+  }
 }
