--- a/src/components/projects/Project.module.css
+++ b/src/components/projects/Project.module.css
@@ -59,6 +59,9 @@
   padding: 2px 10px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.575);
 }
+.projectimg {
+  cursor: zoom-in;
+}
 @media screen and (max-width: 600px) {
   .project {
     padding: 0px 20px;
@@ -122,6 +125,7 @@
   }
   .vist {
     border: none;
+    border-radius: 500px;
     display: block;
     overflow: visible;
   }
